# password-strength-auditor

./: .gitignore  README.md  pyproject.toml
examples/: sample-passwords.txt
pwaudit/: __init__.py  audit.py  cli.py  common_passwords.py  entropy.py  hibp.py  patterns.py  strength.py
tests/: test_audit.py  test_cli.py  test_entropy.py  test_hibp.py  test_patterns.py  test_strength.py
web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web/e2e/: auditor.spec.ts  live.spec.ts  screenshot.spec.ts  tsconfig.json
web/e2e/fixtures/: hibp-mock.ts
web/src/: crackTime.test.ts  crackTime.ts  hibp.test.ts  hibp.ts  main.ts  patterns.test.ts  patterns.ts  strength.test.ts  strength.ts
web/src/__fixtures__/: hibp_cases.json
web/src/styles/: app.css
